--- a/webhtml/css/main.css
+++ b/webhtml/css/main.css
@@ -18,7 +18,7 @@ body {
 }
 
 #Top-header header {
-	font-size: 40px;
+	font-size: 32px;
 }
 
 #Top-header h1 {
@@ -55,6 +55,7 @@ body {
 	padding: -10px;
 }
 
+/* bottom find us */
 #foot {
 	background-color: #ABB1AB;
 	height:400px;
@@ -69,7 +70,55 @@ body {
 	float: right;
 	text-align: left;
 }
+
+#foot-left a{
+	font-size: 14px;
+	color: white;
+}
+
+#foot-right p{
+	font-size: 14px;
+	color: white;
+}
 #copyright{
 	clear: both;
 	text-align: center;
+	font-size: 14px;
+	color: white;
 }
+
+/* about diabetes css */
+.image{
+	width: 90%;
+}
+
+#type1{
+	font-size: 18px;
+}
+#type2{
+	font-size: 18px;
+}
+#Gestational-Diabetes{
+	font-size: 18px;
+}
+#top-middle{
+	line-height: 5px;
+	color:#707070;
+}
+
+#bottom-part header{
+	font-size:32px;
+}
+
+.samll-title{
+	font-size:18px;
+}
+
+#bottom-part h6{
+	font-size:18px;
+}
+
+
+
+
+
