--- a/webhtml/css/font.css
+++ b/webhtml/css/font.css
@@ -1,7 +1,7 @@
-h1{
-    font-family: 'IBM Plex Mono', monospace;
+h1 {
+  font-family: "IBM Plex Mono", monospace;
 }
 
-p{
- font-family: 'IBM Plex Mono', monospace;
+p {
+  font-family: "IBM Plex Mono", monospace;
 }
