--- a/Deliverable_3/views/login.hbs
+++ b/Deliverable_3/views/login.hbs
@@ -28,7 +28,7 @@
                 The practice of good communication skills in the medical profession is integral for the development of
                 meaningful and trustworthy relationship between the doctors and patients and, thus, is beneficial to
                 both of them. The diagnostic capability of the doctor is greatly enhanced because of better
-                understanding of patient’s problems. Furthermore, it is also useful in managing difficult clinical
+                understanding of patient's problems. Furthermore, it is also useful in managing difficult clinical
                 encounters and thus decreases the frustration of both the doctor and the patient or attendant in
                 situations of emotional outbursts. It has also been shown to decrease work stress and increase job
                 satisfaction.</p>
